<?xml version="1.0"?>
<package format="2">
  <name>global_waypoints_generator</name>
  <version>0.0.0</version>
  <description>The global_waypoints_generator package</description>

  <maintainer email="xavier@todo.todo">xavier</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>jsk_gui_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>autoware_msgs</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>jsk_gui_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>autoware_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>jsk_gui_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>
  <export>
  </export>
</package>
